<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_back_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/loginByPassword"
                android:textColor="@color/white" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:hint="@string/et_login_account"
            android:textColorHint="@color/white"/>


        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:hint="@string/et_login_pwd"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/iv_password_visible"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="25sp"
            android:src="@drawable/password_visible" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="10sp"
                android:text="@string/tv_forgetpassword"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10sp"
                android:layout_toLeftOf="@id/tv_forgetpassword"
                android:paddingVertical="5sp"
                android:text="@string/tv_signin"
                android:textColor="@color/white"/>


        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:background="#E4E3E3"
            android:padding="10sp"
            android:text="登录" />

    </LinearLayout>

</layout>